# Home-Traffic-Guard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: windows-installer.yml
installer/windows/: HomeTrafficGuard.iss  HomeTrafficGuard.spec  README.md  build_installer.bat  build_installer.ps1
scripts/: seed_alerts_demo.py
src/home_traffic_guard/: __init__.py  __main__.py  app.py  config.py  launcher.py  logging_setup.py  main.py
src/home_traffic_guard/analytics/: __init__.py  baseline.py
src/home_traffic_guard/collectors/: __init__.py  base.py  dummy_collector.py  models.py  packet_sniffer.py
src/home_traffic_guard/db/: __init__.py  connection.py  repositories.py  schema.py
src/home_traffic_guard/domain/: __init__.py  models.py
src/home_traffic_guard/notifications/: __init__.py  service.py
src/home_traffic_guard/services/: __init__.py  monitoring_service.py
src/home_traffic_guard/ui/: __init__.py  main_window.py
tests/: test_alert_repository.py  test_baseline.py  test_device_repository.py  test_main.py  test_monitoring_interval.py  test_overview_metrics.py  test_packet_sniffer_collector.py
