[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-traffic-guard"
version = "0.1.0"
description = "Desktop app for smart home traffic monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6",
  "scapy>=2.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
